--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,11 @@
     margin-top: 2rem;
     font-size: 1.15rem;
 }
+
+.footer h6 {
+    padding: 2rem 0;
+}
+
+.header h1 {
+    padding: 1.5rem 0;
+}
