Implement feature to reset game

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,10 @@ body {
 .header h1 {
     padding: 1.5rem 0;
 }
+
+#reload-option {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
